--- a/Pages/Postres.xaml
+++ b/Pages/Postres.xaml
@@ -18,6 +18,10 @@
 
             <HorizontalStackLayout>
 
+
+                <Button Clicked="RegresoInicio_Clicked" FontFamily="raleway-boldf" x:Name="RegeresoInicio" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="←" HeightRequest="50" WidthRequest="50" CornerRadius="60" FontAttributes="Bold" />
+
+
                 <!-- Agregamos nuestro logo y definimos su tamaño -->
 
                 <Image Source="logo.png" HeightRequest="90" WidthRequest="90"/>
