--- a/Pages/Mochi.xaml
+++ b/Pages/Mochi.xaml
@@ -3,10 +3,60 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Marthas_Coffee_App_Movil.Pages.Categorias.Postres.Mochi"
              Title="Mochi">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <!-- Definimos el color de fondo de nuestra pagina -->
+
+    <VerticalStackLayout Padding="5,5,5,5" BackgroundColor="#6A4512" >
+
+
+        <!-- Definimos la orientacion y el margin de nuestro VerticalStackLayout -->
+
+        <VerticalStackLayout HorizontalOptions="StartAndExpand" Margin="5,5,5,5">
+
+            <HorizontalStackLayout>
+
+                <Button Clicked="RegeresoInicio_Clicked" FontFamily="raleway-boldf" x:Name="RegeresoInicio" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="←" HeightRequest="50" WidthRequest="50" CornerRadius="60" FontAttributes="Bold" />
+
+
+                <!-- Agregamos nuestro logo y definimos su tamaño -->
+
+                <Image Source="logo.png" HeightRequest="90" WidthRequest="90"/>
+
+                <!-- Agregamos un label y definimos su color,fuente,tamaño,su margen,orientacion, sus atributos, y su propiedad text -->
+
+                <Label TextColor="#FFFFFF"  FontFamily="raleway-boldf" FontSize="30"  Margin="40,2,0,0" VerticalOptions="Center" HeightRequest="35" FontAttributes="Bold" Text="Mochi"/>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+        <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
+            <ImageButton HeightRequest="250" WidthRequest="500" 
+                         CornerRadius="50" Margin="10,10,10,10" />
+        </HorizontalStackLayout>
+
+        <VerticalStackLayout>
+            <Label Text="INGREDIENTES" FontSize="Title" FontAttributes="Bold" HorizontalOptions="Center"/>
+            <Label Text="Ingrediente 1" FontAttributes="Bold" HorizontalOptions="Center" FontSize="Subtitle" Margin="0,10,0,10"/>
+            <Label Text="Ingrediente 2" FontAttributes="Bold" HorizontalOptions="Center" FontSize="Subtitle"  Margin="0,10,0,10"/>
+            <Label Text="Ingrediente 3" FontAttributes="Bold" HorizontalOptions="Center" FontSize="Subtitle"  Margin="0,10,0,10"/>
+            <Label Text="Ingrediente 4" FontAttributes="Bold" HorizontalOptions="Center" FontSize="Subtitle"  Margin="0,10,0,10"/>
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout>
+
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
+
+                <Button FontFamily="raleway-boldf" x:Name="Orden" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="AGREGAR A LA ORDEN" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
+
+                <Button FontFamily="raleway-boldf" x:Name="Mas" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+
+                <Label Margin="10,0,10,0" HorizontalOptions="Center" TextColor="#FFFFFF" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
+
+                <Button FontFamily="raleway-boldf" x:Name="Menos" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
