--- a/Pages/CrearCuenta.xaml
+++ b/Pages/CrearCuenta.xaml
@@ -3,10 +3,76 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Marthas_Coffee_App_Movil.Pages.Categorias.Cuenta.CrearCuenta"
              Title="CrearCuenta">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout  Padding="5,5,5,5" BackgroundColor="#6A4512" >
+
+        <!-- Definimos la orientacion y el margin de nuestro VerticalStackLayout -->
+
+            <VerticalStackLayout HorizontalOptions="StartAndExpand" Margin="5,5,5,5">
+
+                <HorizontalStackLayout>
+
+                    <Button Clicked="RegresoCuenta_Clicked" FontFamily="raleway-boldf" x:Name="RegeresoInicio" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="←" HeightRequest="50" WidthRequest="50" CornerRadius="60" FontAttributes="Bold" />
+
+
+                    <!-- Agregamos nuestro logo y definimos su tamaño -->
+
+                    <Image Source="logo.png" HeightRequest="90" WidthRequest="90"/>
+
+                    <!-- Agregamos un label y definimos su color,fuente,tamaño,su margen,orientacion, sus atributos, y su propiedad text -->
+
+                    <Label TextColor="#FFFFFF"  FontFamily="raleway-boldf" FontSize="30"  Margin="5,2,0,0" VerticalOptions="Center" HeightRequest="35" FontAttributes="Bold" Text="Crear cuenta"/>
+
+                </HorizontalStackLayout>
+
+            </VerticalStackLayout>
+
+        <VerticalStackLayout>
+            <Label TextColor="#ffffff" Text="Rellene los campos" HorizontalOptions="CenterAndExpand" Margin="10,10,10,10" FontSize="20" FontAttributes="Bold"></Label>
+        </VerticalStackLayout>
+
+        <VerticalStackLayout>
+
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
+
+                <Label Text="Nombres:" HorizontalOptions="StartAndExpand"> </Label>
+
+                <Entry HorizontalOptions="EndAndExpand"></Entry>
+            </HorizontalStackLayout>
+        </VerticalStackLayout>
+
+        <VerticalStackLayout>
+
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
+
+                <Label Text="Nombres:" HorizontalOptions="StartAndExpand"></Label>
+
+                <Entry HorizontalOptions="EndAndExpand"></Entry>
+            </HorizontalStackLayout>
+        </VerticalStackLayout>
+
+        <VerticalStackLayout>
+
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
+
+                <Label Text="Nombres:" HorizontalOptions="StartAndExpand"></Label>
+
+                <Entry HorizontalOptions="EndAndExpand"></Entry>
+            </HorizontalStackLayout>
+        </VerticalStackLayout>
+
+        <VerticalStackLayout>
+
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand">
+
+                <Label Text="Nombres:" HorizontalOptions="StartAndExpand"></Label>
+
+                <Entry HorizontalOptions="EndAndExpand"></Entry>
+            </HorizontalStackLayout>
+        </VerticalStackLayout>
+
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand"
+                             >
+            <Button Text="Crear cuenta"></Button>
+        </VerticalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
